--- a/css/libs/_skeleton.scss
+++ b/css/libs/_skeleton.scss
@@ -1,5 +1,7 @@
 /*
-* Skeleton-SASS V1.0
+* Nebo Skeleton-SASS
+*
+* Based off Skeleton-SASS V1.0
 * Copyright 2012 by Michael Lazer-Walker
 * https://github.com/lazerwalker/Skeleton-Sass
 *
