--- a/css/core/_layout.scss
+++ b/css/core/_layout.scss
@@ -10,6 +10,11 @@
 //   Containers
 // -------------------------------------
 
+.l-container {
+	@include container;
+}
+
+
 // -------------------------------------
 //   Utilities
 // -------------------------------------
