Replace Skeleton with Bootstrap grid.

--- a/css/application.scss
+++ b/css/application.scss
@@ -12,8 +12,8 @@
 // ----- Reset ----- //
 @import "libs/reset";
 
-// ----- Skeleton ----- //
-@import "libs/skeleton";
+// ----- Bootstrap Grid ----- //
+@import "libs/bootstrap/bootstrap";
 
 // ----- Variable overrides for libraries ----- //
 @import "libs/library-variable-overrides";
