--- a/dev/css/libs/_library-custom-variables.scss
+++ b/dev/css/libs/_library-custom-variables.scss
@@ -1,6 +1,6 @@
 // -------------------------------------
 //
-//   Library Variable Overrides
+//   Custom Variables for Libraries
 //
 // -------------------------------------
 
