--- a/dev/includes/footer.html
+++ b/dev/includes/footer.html
@@ -5,10 +5,10 @@
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
 
 <!-- build:js js/site.js -->
-    <script src="js/utils/console_fix.js"></script>
-    <script src="js/nebo/dropdown.js"></script>
-    <script src="js/events/nav_events.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/utils/console_fix.js"></script>
+    <script src="../js/nebo/dropdown.js"></script>
+    <script src="../js/events/nav_events.js"></script>
+    <script src="../js/main.js"></script>
 <!-- endbuild -->
 
 
