add live reload

--- a/dev/includes/header.html
+++ b/dev/includes/header.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="css/application.css">
     <script src="components/modernizr/modernizr.js"></script>
+    <script src="//localhost:35729/livereload.js"></script>
   </head>
   <body>
     <header>
