--- a/dev/includes/header.html
+++ b/dev/includes/header.html
@@ -16,5 +16,5 @@
   </head>
   <body>
     <header>
-      <h1>Its @@defaultText</h1>
+      <h1>Its <strike>@@defaultText</strike></h1>
     </header>
